# schema-forge

./: README.md  docker-compose.yml  milestones.md
backend/: .env.example  Cargo.toml  README.md
backend/fixtures/: customer-order.json
backend/migrations/: 0001_init.sql
backend/src/: config.rs  crud.rs  discovery.rs  error.rs  events.rs  lib.rs  main.rs  permissions.rs  persistence.rs  realtime.rs  routes.rs  schema.rs  state.rs  workflow.rs
backend/tests/: meta_schema.rs
docs/: PRD.md  README.md  design-plan.md  execution-plan.md  structure.md  system-design.md  tracker.md
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: SchemaForm.tsx  SchemaTable.tsx  widgets.ts
frontend/src/types/: schema.ts
