[package]
name = "schema-forge"
version = "0.1.0"
edition = "2021"
description = "SchemaForge — metadata-driven application platform (Rust/Axum backend)"
license = "Apache-2.0"

[[bin]]
name = "schema-forge"
path = "src/main.rs"

[lib]
name = "schema_forge"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (Axum / Tower / Tokio)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Datastore — PostgreSQL + JSONB, compile-time-checked SQL + migrations
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
    "migrate",
] }

# Event backbone — Apache Kafka via librdkafka bindings
# NOTE: building rdkafka compiles a bundled librdkafka and requires CMake + a C compiler.
rdkafka = { version = "0.36", features = ["tokio"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
thiserror = "1"
anyhow = "1"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

# Expression sandbox (ABAC permissions + workflow `when` conditions).
# CEL keeps evaluation safe (no arbitrary code). Wire this into
# `permissions::evaluate` and `workflow` once the meta-schema is locked.
# Pin/adjust the exact version with `cargo update` on first build.
# cel-interpreter = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
